Changes to execute nexjs into container

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "export": "next export",
     "lint": "next lint",
     "lint-fix": "next lint --fix",
-    "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json}\" --config ./.prettierrc"
+    "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json}\" --config ./.prettierrc",
+    "docker-start": "next build && next start"
   },
   "devDependencies": {
     "eslint": "8.17.0",
