Changes package.json information

--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "tokyo-free-black-nextjs-admin-dashboard",
+  "name": "core",
   "version": "1.0.0",
-  "title": "Tokyo Free Black NextJS Typescript Admin Dashboard",
-  "description": "High performance React template built with lots of powerful MUI (Material-UI) components across multiple product niches for fast & perfect apps development processes",
-  "author": {
-    "name": "BloomUI.com",
-    "url": "https://bloomui.com"
-  },
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emotion/cache": "11.7.1",
     "@emotion/react": "11.9.0",
