--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "17.0.40",
     "@types/react-dom": "17.0.13",
     "apexcharts": "3.35.3",
+    "blueimp-md5": "^2.19.0",
     "clsx": "1.1.1",
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
@@ -42,6 +43,7 @@
     "docker-start": "next build && next start"
   },
   "devDependencies": {
+    "@types/blueimp-md5": "^2.18.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
