--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "docker-start": "next build && next start"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.1",
     "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.3",
