--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
           platforms: "linux/amd64, linux/arm64"
           context: .
           push: true
-          tags: "lpsouza/adia-frontend:latest"
+          tags: "lpsouza/adia-app:latest"
