--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       "@/components/*": [
         "components/*"
       ],
+      "@/helpers/*": [
+        "helpers/*"
+      ],
       "@/public/*": [
         "public/*"
       ],
