--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.9.3",
     "@mui/x-data-grid": "^5.17.13",
     "blueimp-md5": "^2.19.0",
+    "clsx": "^1.2.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
