--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@mui/x-data-grid": "^5.17.13",
     "blueimp-md5": "^2.19.0",
     "clsx": "^1.2.1",
-    "next": "12.2.4",
+    "next": "^12.2.4",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
