--- a/package.json
+++ b/package.json
@@ -19,18 +19,14 @@
     "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.11.3",
     "@mui/x-data-grid": "^5.17.18",
-    "blueimp-md5": "^2.19.0",
     "clsx": "^1.2.1",
-    "formdata-node": "^5.0.0",
-    "formidable": "^2.1.1",
     "next": "^12.3.4",
     "next-auth": "^4.18.8",
+    "next-http-proxy-middleware": "^1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/blueimp-md5": "^2.18.0",
-    "@types/formidable": "^2.0.5",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
