Added secret config to k8s IaC

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,3 +26,5 @@ spec:
           envFrom:
             - configMapRef:
                 name: app
+            - secretRef:
+                name: app
